# renamer-cpp

./: CMakeLists.txt  README.md
Common/: Common.cpp  Common.hpp  Exception.cpp  Exception.hpp
Renamer/: Main.cpp  Renamer.cpp  Renamer.hpp
Tests/: CMakeLists.txt
Tests/Renamer/: Renamer.cpp
